got all questions going

--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ body{
 #question2,
 #question3,
 #question4,
-#question5 {
+#question5,
+#score {
     display: none;
     background-color: orange;
 }
