--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ body{
     width: 100%;
 }
 
-.time-remaining {
-
-}
-
 #startButton {
     margin-bottom: 10px;
 }
@@ -48,16 +44,16 @@ body{
 }
 
 #content {
-    background-color: black;
+    background-color: rgb(218, 112, 112);
     width: 500p;
-    height: 50px;
+    height: 100px;
 }
 
 .question {
     background-color: aqua;
 }
 
-#question1,
+/* #question1,
 #question2,
 #question3,
 #question4,
@@ -65,6 +61,10 @@ body{
 #score {
     display: none;
     background-color: orange;
+} */
+
+#questions {
+    display: none;
 }
 
 .choice:hover {
