working on a line break for the name field

--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ body{
     padding: 10px;
 }
 
-#reTryButton {
+#reTryButton, #nameInput {
     display: none;
+    
 }
 
 #startButton:hover, #reTryButton:hover {
