--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 :root {
-
+    --background-color: rgb(35, 35, 35);
+    --border: 1px solid black;
+    --hoverBorderColor: red;
+    --color: white;
 }
 
 * {
@@ -35,16 +38,6 @@ body{
     flex-wrap: wrap;
 }
 
-/* .viewAll {
-    font-style: italic;
-    font-size: .75em;
-}
-
-.viewAll:hover {
-    cursor: pointer;
-    font-style: italic;
-} */
-
 #scoreLi {
     list-style: none;
 }
@@ -55,19 +48,18 @@ input {
 }
 
 #submitButton {
-    /* display: block; */
     font-size: .75em;;
     margin-left: 10px;
-    background-color: rgb(35, 35, 35);
-    border: 1px solid black;
+    background-color: var(--background-color);
+    border: var(--border);
     border-radius: 5px;
-    color: white;
+    color: var(--color);
     padding: 10px;
 }
 
 #submitButton:hover {
-    background-color: rgb(80, 80, 80);
-    border-color: red;
+    background-color: var(--background-color);
+    border-color: var(--hoverBorderColor);
     cursor: pointer;
 }
 
@@ -75,9 +67,9 @@ input {
     display: block;
     margin-bottom: 10px;
     background-color: rgb(35, 35, 35);
-    border: 1px solid black;
+    border: var(--border);
     border-radius: 5px;
-    color: white;
+    color: var(--color);
     padding: 10px;
 }
 
@@ -88,13 +80,12 @@ input {
 
 #startButton:hover, #reTryButton:hover {
     background-color: rgb(80, 80, 80);
-    border-color: red;
+    border-color: var(--hoverBorderColor);
     cursor: pointer;
 }
 
 #content {
     display: none;
-    /* background-color: rgb(218, 112, 112); */
     width: 500px;
     height: 100%;
 }
@@ -112,7 +103,7 @@ input {
 
 #questionContainer li {
     background-color: rgb(35, 35, 35);
-    border: 1px solid black;
+    border: var(--border);
     border-radius: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -123,7 +114,7 @@ input {
 }
 
 #questionContainer li::first-line {
-    color: white;
+    color: var(--color);
 }
 
 #questionContainer {
@@ -133,7 +124,7 @@ input {
 
 #questionContainer li:hover {
     background-color: rgb(80, 80, 80);
-    border-color: red;
+    border-color: var(--hoverBorderColor);
     cursor: pointer;
 }
 
